Fix build error aarch64 and x86_64
Change-Id: I27fc4abd0c87f7949bbf8ea06e69573389ac88af
Signed-off-by: Tae-Young Chung <ty83.chung@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,13 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 #set(CMAKE_VERBOSE_MAKEFILE ON)
 #comment or remove the above line before release
 
+if ("${ARCH}" MATCHES "aarch64")
+MESSAGE(${ARCH})
+set(LIB_SUFFIX "64")
+else ("${ARCH}" MATCHES "aarch64")
+MESSAGE(${ARCH})
+endif ("${ARCH}" MATCHES "aarch64")
+
 add_definitions (-DZINT_VERSION=\"${ZINT_VERSION}\" -Wno-unused-variable -Wall )
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" )
